fixes double scroll bug on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,11 @@
 html {
     -webkit-text-size-adjust: 100%; /* Prevent font scaling in landscape while allowing user zoom */
 }
+body {
+    background-color:#f9feff;
+    padding:10px;
+    margin:0;
+}
 #hide {
     width:100%;
     height:100%;
@@ -106,51 +111,6 @@ h3 {
     padding-bottom:50px;
     width:100%;
     height:100%;
-}
-.noverflow {
-    overflow: hidden;
-}
-#bottom-bar {
-    width:100%;
-    display:block;
-    position:fixed;
-    bottom:0;
-    left:0;
-    background-color:#287988;
-    padding:0;
-    margin:0;
-    z-index:3;
-}
-#bottom-bar > div {
-    display: flex;
-    justify-content: space-between;
-}
-#bottom-bar > div > button {
-    background-color:transparent;
-    width:60px;
-    height:60px;
-    padding:0;
-    border:none;
-}
-#bottom-bar > div > button:focus {
-    outline: none; 
-}
-#bottom-bar > div > button > img {
-    background-color:transparent;
-    width:40px;
-    height:40px;
-    padding:0;
-    margin:0;
-    opacity:0.5;
-    cursor:pointer;
-}
-.selected {
-    opacity: 1 !important;;
-}
-body {
-    background-color:#f9feff;
-    padding:10px;
-    margin:0;
 }
 li {
     margin-top:7px;
